--- a/config-server/src/main/resources/configurations/discovery-service.yml
+++ b/config-server/src/main/resources/configurations/discovery-service.yml
@@ -4,6 +4,8 @@ eureka:
   client:
     register-with-eureka: false
     fetch-registry: false
+    healthcheck:
+        enabled: true
     service-url:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
 
